# youtube-mcp-server

./: README.md  pyproject.toml  test.py
src/app/: server.py
